# Traits-from-the-Ground-Up

./: Cargo.toml  README.md
data_and_behavior/: Cargo.toml
data_and_behavior/src/: add_method.rs  add_method2.rs  add_method3.rs  associated_constants.rs  associeted_types1.rs  facts.rs  make_true.rs  marker_traits.rs  unambiguous_function_call.rs
traits/: Cargo.toml
traits/src/: lib.rs  print_news.rs  print_news2.rs  print_news3.rs  print_news4.rs  print_news5.rs  trait.rs
